infrastructure/gcp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abc-io
  labels:
    app: abc-io
    environment: production
